# Air-django

./: init.py  pyproject.toml  requirements.txt
bookings/: models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py  permissions.py
config/: authentication.py  settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py
experiences/: models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py
houses/: models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_nigth.py  0003_house_pets_allowed.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_viedo_file.py  0003_alter_photo_experience_alter_photo_room.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  queries.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_room_name_alter_amenity_description.py  0004_alter_amenity_options.py  0005_room_category.py  (+1 more)
users/: admin.py  models.py  serializers.py  types.py  views.py
wishlists/: serializers.py  urls.py  views.py
(+6 files in other folders)
