[tool.poetry]
name = "air-django"
version = "0.1.0"
description = ""
authors = ["knw <kimnamwook08@gmail.com>"]
readme = "README.md"
packages = [{include = "air_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "~4.1"
djangorestframework = "^3.14.0"
strawberry-graphql-django = "^0.9.4"
pyjwt = "^2.6.0"
django-environ = "^0.10.0"
django-cors-headers = "^3.14.0"
requests = "^2.28.2"
dj-database-url = "^1.3.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
